<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.phm.drawer.ReportFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_report"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.phm.drawer.FilterFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.phm.drawer.GraphsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_graphs" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.phm.drawer.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>