<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".SetImportance">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseImportance"
        android:padding="10dp"
        android:textColor="@color/design_default_color_primary_dark"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/lowestHighest"
        android:textAlignment="center"
        android:textSize="18sp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/body_temperature"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerBodyTemp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_pressure"
            android:padding="10dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerBloodPressure"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="135dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_weight"
            android:padding="10dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerBodyWeight"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="165dp"
            android:layout_marginStart="165dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glycemic_index"
            android:padding="10dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerGlycemicIndex"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="137dp"
            android:layout_marginStart="137dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate"
            android:padding="10dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerHeartRate"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="187dp"
            android:layout_marginStart="187dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_time"
            android:padding="10dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerSleepTime"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="183dp"
            android:layout_marginStart="183dp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:background="@drawable/custom_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"/>


</LinearLayout>