<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".Threshold">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/threshold_settings"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/set_thresholds_to_monitor_for_each_of_your_information_for_the_chosen_period_of_time"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_gravity="center"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/time_period"
            android:padding="10dp"
            android:textSize="16sp" />

        <Spinner
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTimePeriod"
            android:layout_marginLeft="160dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="160dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thresholds"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_temperature"
            android:textSize="16sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etBodyTempThresh"
            android:inputType="number"
            android:layout_marginLeft="140dp"
            android:layout_marginStart="140dp" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchBodyTemp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_pressure"
            android:textSize="16sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etBloodPressureThresh"
            android:inputType="number"
            android:layout_marginLeft="164dp"
            android:layout_marginStart="164dp" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/switchBloodPressure"
            android:layout_marginStart="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_weight"
            android:textSize="16sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etBodyWeightThresh"
            android:inputType="number"
            android:layout_marginLeft="184dp"
            android:layout_marginStart="184dp" />
        <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:id="@+id/switchBodyWeight"
            android:layout_marginStart="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate"
            android:textSize="16sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etHeartRateThresh"
            android:layout_marginLeft="196dp"
            android:layout_marginStart="196dp"
            android:inputType="number"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/switchHeartRate"
            android:layout_marginStart="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_time"
            android:textSize="16sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etSleepTimeThresh"
            android:layout_marginLeft="192dp"
            android:layout_marginStart="192dp"
            android:inputType="number"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/switchSleepTime"
            android:layout_marginStart="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glycemic_index"
            android:textSize="16sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etGlycemicIndexThresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="165dp"
            android:layout_marginLeft="165dp"
            android:inputType="number" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/switchGlycemicIndex"
            android:layout_marginStart="20dp" />
    </LinearLayout>


    <TextView
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/threshold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

</LinearLayout>