<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/hearts"
            android:layout_marginStart="180dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/heart_rate"
            android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastUpdate"
        android:text=""
        android:gravity="center_horizontal"
        android:textSize="15sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnChooseDate"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/cal"
                android:padding="10dp"
                android:layout_marginLeft="80dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="80dp" />

            <Switch
                android:id="@+id/mySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="25dp"
                android:layout_marginRight="80dp"
                android:switchPadding="10dp"
                android:text="@string/today"
                android:textSize="24sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="80dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvDateChosen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/date"
            android:layout_marginBottom="15dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/etHeartRate"
                android:hint="@string/insert_heart_rate"
                android:inputType="number"
                android:layout_marginLeft="95dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="95dp">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bpm"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp">
            </TextView>

        </LinearLayout>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:hint="@string/optionalNote"
            android:id="@+id/etOptionalNote"
            android:inputType="text|textMultiLine" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnConfirm"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_button"
            android:padding="15dp"
            android:text="@string/confirm"
            android:textSize="24sp" />

</LinearLayout>